--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@coreui/angular": "^4.3.11",
+    "@coreui/icons-angular": "^4.3.9",
     "axios": "^1.3.2",
+    "hammerjs": "^2.0.8",
+    "ng-gallery": "^8.0.2",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^15.0.0",
     "rxjs": "~7.8.0",
