--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "axios": "^1.3.2",
     "hammerjs": "^2.0.8",
     "ng-gallery": "^8.0.2",
-    "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^15.0.0",
     "rxjs": "~7.8.0",
+    "script-loader": "^0.7.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
